infrastructure/base/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    middle-earth-cluster.homelab/category: infrastructure
    middle-earth-cluster.homelab/realm: monitoring
