infrastructure/base/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
  labels:
    middle-earth-cluster.homelab/category: infrastructure
    middle-earth-cluster.homelab/realm: network
spec:
  parentRefs:
    - name: internal-gateway
      namespace: ingress-nginx
      sectionName: https
  hostnames:
    - headlamp.from-gondor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
